// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./RegistrationPage.js should display no password field when current provider is present 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="fade alert-warning mt-n2 alert show"
        id="tpa-alert"
        role="alert"
      >
        <span>
          You've successfully signed into Google. We just need a little more information before you start learning with openedX.
        </span>
      </div>
      <div
        className="text-left"
      >
        <span>
          Already have an edX account?
        </span>
        <a
          href="/login"
        >
           Sign in.
        </a>
      </div>
      <form
        className="mb-4 form-group"
      >
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="name"
          >
            Full Name (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="username"
          >
            Public Username (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="email"
          >
            Email (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="username@domain.com"
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group custom-control mb-0"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary mt-10 btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should match TPA provider snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="text-left"
      >
        <span>
          Already have an edX account?
        </span>
        <a
          href="/login"
        >
           Sign in.
        </a>
      </div>
      <div
        className="d-block mb-4 mt-4"
      >
        <h4
          className="d-block mx-auto mb-4"
        >
          Create an account using
        </h4>
        <div
          className="row tpa-container mb-3"
        >
          <button
            className="btn-social btn-oa2-apple-id"
            id="oa2-apple-id"
            onClick={[Function]}
            type="button"
          >
            <div
              aria-hidden="true"
            >
              <img
                alt="icon Apple"
                className="icon-image"
                src="https://edx.devstack.lms/logo.png"
              />
            </div>
            <span
              aria-hidden="true"
              className="pl-2"
            >
              Apple
            </span>
          </button>
        </div>
        <h4
          className="d-block mx-auto mt-4"
        >
          or create a new one here
        </h4>
      </div>
      <form
        className="mb-4 form-group"
      >
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="name"
          >
            Full Name (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="username"
          >
            Public Username (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="email"
          >
            Email (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="username@domain.com"
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="password"
          >
            Password (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group custom-control mb-0"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary mt-10 btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should match default section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="text-left"
      >
        <span>
          Already have an edX account?
        </span>
        <a
          href="/login"
        >
           Sign in.
        </a>
      </div>
      <form
        className="mb-4 form-group"
      >
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="name"
          >
            Full Name (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="username"
          >
            Public Username (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="email"
          >
            Email (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="username@domain.com"
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="password"
          >
            Password (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group custom-control mb-0"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary mt-10 btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should match pending button state snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="text-left"
      >
        <span>
          Already have an edX account?
        </span>
        <a
          href="/login"
        >
           Sign in.
        </a>
      </div>
      <form
        className="mb-4 form-group"
      >
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="name"
          >
            Full Name (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="username"
          >
            Public Username (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="email"
          >
            Email (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="username@domain.com"
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="password"
          >
            Password (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group custom-control mb-0"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information
          </p>
        </div>
        <button
          aria-disabled={true}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary mt-10 disabled btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            <span
              className="pgn__stateful-btn-icon"
            >
              <span
                aria-hidden={true}
                className="icon fa fa-spinner fa-spin"
                id="Icon1"
              />
            </span>
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`./RegistrationPage.js should show error message on 409 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="mw-500"
    >
      <div
        className="fade alert alert-danger show"
        role="alert"
      >
        <div
          className="text-danger alert-heading h4"
        >
          <span>
            We couldn't create your account.
          </span>
        </div>
        <div>
          <ul>
            <li
              className="text-left"
            >
              It looks like test@gmail.com belongs to an existing account. Try again with a different email address.
            </li>
            <li
              className="text-left"
            >
              It looks like test belongs to an existing account. Try again with a different username.
            </li>
          </ul>
        </div>
      </div>
      <div
        className="text-left"
      >
        <span>
          Already have an edX account?
        </span>
        <a
          href="/login"
        >
           Sign in.
        </a>
      </div>
      <form
        className="mb-4 form-group"
      >
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="name"
          >
            Full Name (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="username"
          >
            Public Username (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="username"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="email"
          >
            Email (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="username@domain.com"
            required={true}
            type="email"
            value=""
          />
        </div>
        <div
          className="form-group mb-0"
        >
          <label
            className="h6 pt-10"
            htmlFor="password"
          >
            Password (required)
          </label>
          <input
            aria-describedby=""
            className="form-control"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            required={true}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group custom-control mb-0"
        >
          <input
            aria-describedby=""
            checked={true}
            className="form-check-input"
            id="honor_code"
            name="honor_code"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={true}
          />
          I agree to the Your Platform Name Here 
          <a
            href="/honor"
            onClick={[Function]}
            target="_self"
          >
            Honor Code
          </a>
          
          <strong
            className="invalid-feedback"
            id="honor_code-invalid-feedback"
          >
            You must agree to the Your Platform Name Here Honor Code
          </strong>
        </div>
        <div
          className="form-group custom-control pt-10 mb-0"
        >
          <input
            aria-describedby=""
            checked={false}
            className="form-check-input"
            id="optional"
            name="optional"
            onChange={[Function]}
            required={true}
            type="checkbox"
            value={false}
          />
          <p
            className="mb-0"
            id="additionalFields"
            onClick={[Function]}
            role="presentation"
          >
            Support education research by providing additional information
          </p>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-default btn-primary mt-10 btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Create Account
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;
